--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,25 +6,21 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - db
       - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
-
   server:
     build: server
     container_name: server
     ports:
       - "9090:9090"
-    depends_on:
-      - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
-
   db:
-    image: postgres:14-alpine
+    image: postgres:14
+    restart: always
     container_name: postgresql
     ports:
       - "6541:5432"
