--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,3 +1,3 @@
 FROM amazoncorretto:11-alpine-jdk
 COPY target/*.jar appShareItGateway.jar
-ENTRYPOINT ["java","-jar","/appShareItGateway.jar"]
+ENTRYPOINT ["java","-jar","/appShareItGateway.jar", "--server.port=8080"]
