--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   server:
     build: server
     container_name: server
+    depends_on:
+      - db
     ports:
       - "9090:9090"
     environment:
@@ -19,12 +21,11 @@ services:
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
   db:
-    image: postgres:14
-    restart: always
+    image: postgres:14-alpine
     container_name: postgresql
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_DB=shareit
       - POSTGRES_PASSWORD=root
       - POSTGRES_USER=root
+      - POSTGRES_DB=shareit
