--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:11-alpine-jdk
+FROM amazoncorretto:11.0.2
 COPY target/*.jar appShareItServer.jar
 CMD ["java","-jar","/appShareItServer.jar", "--server.port=9090"]
